# czkawka

./: .clippy.toml  .gitignore  .mailmap  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Changelog  Changelog.md  Diff  IMPLEMENTATION_PLAN_SIMILAR_VIDEOS.md  Instruction.md  KROKIET_CODE_REVIEW_REPORT.md  LICENSE  LICENSE_CC_BY_4_ICONS  LICENSE_MIT_EVERYTHING_OUTSIDE_ANY_CARGO_APP_LIBRARY  POMYSLY_FUNKCJE.md  QOLD.z  QTXT.z  README.md  TODO.md  TODO_VIDEO_AUDIO.md  cargo-sources.json  clippy.toml  deny.toml  flake.nix  io.github.qarmin.czkawka.json  justfile  mon_jan_26_2026_identifying_similar_images_and_videos.md
cedinia/: AGENTS.md  Cargo.toml  LICENSE_CC_BY_4_ICONS  README.md  THIRD_PARTY_LICENSES.txt  TMP_INSTALL.md  build.rs  i18n.toml
cedinia/android/: asan_wrap.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
cedinia/java/: CediniaActivity.java  CediniaFilePicker.java  CediniaPickerFragment.java
cedinia/src/: app.rs  callbacks.rs  common.rs  compare.rs  file_actions.rs  file_picker_android.rs  lib.rs  localizer_cedinia.rs  model.rs  notifications.rs  scan_runner.rs  scanners.rs  set_initial_gui_infos.rs  thumbnail_loader.rs  translations.rs  volumes.rs
cedinia/ui/: app_state.slint  bottom_nav.slint  colors.slint  common.slint  components.slint  directories_screen.slint  home_screen.slint  image_compare.slint  main_window.slint  momentum_scroll.slint  results_list.slint  scan_progress.slint  settings_components.slint  settings_screen.slint  similar_images_gallery.slint  top_bar.slint  translations.slint
ci_tester/: Cargo.toml
ci_tester/src/: advanced_tests.rs  main.rs  test_cases.rs  test_file_system.rs
czkawka_cli/: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE_MIT  README.md  build.rs
czkawka_cli/src/: arguments_pair.rs  commands.rs  main.rs  parsers.rs  progress.rs
czkawka_core/: AGENTS.md  Cargo.toml  LICENSE  LICENSE_CC_BY_4_TEST_FILES  LICENSE_CC_BY_4_TEST_ICONS  README.md  build.rs
czkawka_core/benches/: hash_calculation_benchmark.rs  similar_images_hash_benchmark.rs
czkawka_core/src/: bad_extensions.rs  big_file.rs  broken_files.rs  common.rs  common_cache.rs  common_dir_traversal.rs  common_directory.rs  common_extensions.rs  common_image.rs  common_items.rs  common_messages.rs  common_tool.rs  common_traits.rs  duplicate.rs  empty_files.rs  empty_folder.rs  invalid_symlinks.rs  lib.rs  localizer.rs  localizer_core.rs  progress_data.rs  same_music.rs  similar_files.rs  similar_images.rs  similar_videos.rs  temporary.rs  zeroed.rs
czkawka_gui/: AGENTS.md  CODE_REVIEW_FINDINGS.md  Cargo.toml  LICENSE  LICENSE_CC_BY_4_ICONS  LICENSE_MIT_WINDOWS_THEME  README.md  SECURITY_SUMMARY.md  build.rs  czkawka.glade  data  i18n.toml
czkawka_gui/src/: cli.rs  compute_results.rs  connect_about_buttons.rs  connect_button_compare.rs  connect_button_delete.rs  connect_button_hardlink.rs  connect_button_move.rs  connect_button_save.rs  connect_button_search.rs  connect_button_select.rs  connect_button_sort.rs  connect_button_stop.rs  connect_button_symlink.rs  connect_change_language.rs  connect_compute_results.rs  connect_duplicate_buttons.rs  connect_header_buttons.rs  connect_hide_text_view_errors.rs  connect_notebook_tabs.rs  connect_popover_duplicate.rs  connect_popovers.rs  connect_progress_window.rs  connect_selection_of_directories.rs  connect_settings.rs  connect_show_hide_ui.rs  connect_similar_image_size_change.rs  connect_upper_notebook.rs  create_tree_view.rs  dicom_traits.rs  double_click_opening.rs  gtk_traits.rs  gui_about.rs  gui_bottom_buttons.rs  gui_compare_images.rs  gui_data.rs  gui_header.rs  gui_main_notebook.rs  gui_options.rs  gui_popovers.rs  gui_progress_dialog.rs  (+19 more)
czkawka_gui/ui/: TTT.cmb  about_dialog.cmb.ui  about_dialog.glade  about_dialog.ui  compare_images.cmb.ui  compare_images.glade  compare_images.ui  czkawka.cmb  main_window.cmb.ui  main_window.glade  main_window.ui  popover_right_click.glade  popover_right_click.ui  popover_select.glade  popover_select.ui  popover_sort.glade  popover_sort.ui  progress.cmb.ui  progress.glade  progress.ui  settings.cmb.ui  settings.glade  settings.ui
czkawka_gui_orbtk/: Cargo.toml
czkawka_gui_orbtk/src/: main.rs
czkawka_mcp/: Cargo.toml
czkawka_mcp/src/: main.rs
czkawka_slint_gui/: Cargo.toml  LICENSE  README.md
czkawka_slint_gui/src/: common.rs  connect_delete.rs  connect_directories_changes.rs  connect_open.rs  connect_progress_receiver.rs  connect_scan.rs  main.rs  settings.rs
czkawka_slint_gui/ui/: action_buttons.slint  bottom_panel.slint  color_palette.slint  common.slint  left_side_panel.slint  main_lists.slint  main_window.slint  selectable_tree_view.slint  settings.slint
krokiet/: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE_CC_BY_4_AUDIO_FILES  LICENSE_CC_BY_4_ICONS  LICENSE_GPL_APP  LICENSE_MIT_CODE  README.md  build.rs
krokiet/audio/: stop_bit.m4a
krokiet/src/: audio_player.rs  clear_outdated_video_thumbnails.rs  cli.rs  common.rs  connect_clean.rs  connect_clean_cache.rs  connect_compare.rs  connect_delete.rs  connect_directories_changes.rs  connect_move.rs  connect_open.rs  connect_optimize.rs  connect_optimize_video.rs  connect_progress_receiver.rs  connect_rename.rs  connect_rfd.rs  connect_row_selection.rs  connect_save.rs  connect_scan.rs  connect_select.rs  connect_show_confirmation.rs  connect_show_preview.rs  connect_size_of_config_cache.rs  connect_softlink.rs  connect_sort.rs  connect_sort_column.rs  connect_stop.rs  connect_tab_changed.rs  connect_translation.rs  create_calculate_task_size.rs  localizer_krokiet.rs  main.rs  model_operations.rs  notification_manager.rs  set_initial_gui_info.rs  set_initial_scroll_list_data_indexes.rs  settings.rs  shared_models.rs  simpler_model.rs  test_common.rs
krokiet/ui/: about.slint  action_buttons.slint  bottom_panel.slint  callabler.slint  color_palette.slint  common.slint  fonts.slint  gui_state.slint  image_compare.slint  included_directories.slint  included_paths.slint  left_side_panel.slint  main_lists.slint  main_window.slint  popup_action_confirm.slint  popup_base.slint  preview.slint  (+26 more)
(+663 files in other folders)
