[package]
name = "cedinia"
version = "1.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Android touch-friendly GUI for Czkawka Core – named after the Battle of Cedynia (972 AD)"
license = "GPL-3.0-only"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

# Android requires a cdylib crate type
[lib]
name = "cedinia"
crate-type = ["cdylib", "rlib"]


[dependencies]
czkawka_core = { version = "11.0.1", path = "../czkawka_core" }
crossbeam-channel = "0.5"
log = "0.4"
humansize = "2.1"
serde = "1.0"
serde_json = "1.0"
image = { version = "0.25", features = ["qoi"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }

slint = { version = "1.15.0", default-features = false, features = [
    "std",
    "compat-1-2",
] }

handsome_logger = "0.9.2"

[target.'cfg(target_os = "android")'.dependencies]
# Android backend – re-exported by Slint
slint = { version = "1.15.0", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-android-activity-06",
] }
android-activity = { version = "0.6", features = ["native-activity"] }
# JNI bindings needed by file_picker_android.rs
jni = { version = "0.22.1", default-features = false }
# Log to Android logcat
android_logger = "0.15.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
slint = { version = "1.15.0", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-winit-femtovg",
    "renderer-winit-software",
] }

[build-dependencies]
slint-build = "1.15"
# Used by build.rs to compile Java helpers to DEX when cross-compiling for Android.
# The build.rs itself guards on TARGET containing "android" so this is a no-op on desktop.
android-build = "0.1.2"

[features]
default = []

# ── Android packaging metadata (used by cargo-apk) ───────────────────────────
[package.metadata.android]
package = "io.github.qarmin.cedinia"
label = "Cedinia"
resources = "res"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 34

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"

# Use our NativeActivity subclass so that onActivityResult is intercepted
# and forwarded to CediniaFilePicker / the Rust JNI callback.
[package.metadata.android.application.activity]
name = "android.app.NativeActivity"

# Full external storage access (needed to scan /sdcard root on Android 11+)
[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
