[package]
name = "czkawka_cli"
version = "11.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "CLI frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }

log = "0.4.22"
czkawka_core = { path = "../czkawka_core", version = "11.0.0", features = [] }
indicatif = "0.18"
crossbeam-channel = { version = "0.5", features = [] }
ctrlc = { version = "3.4", features = ["termination"] }
humansize = "2.1"

[features]
default = []
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["czkawka_core/xdg_portal_trash"]

no_colors = []

[lints]
workspace = true
