[package]
name = "czkawka_core"
version = "8.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"
rust-version = "1.80.0"
description = "Core of Czkawka app"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
humansize = "2.1"
rayon = "1.10"
crossbeam-channel = "0.5"

# For saving/loading config files to specific directories
directories-next = "2.0"

# Needed by similar images
image_hasher = "2.0"
bk-tree = "0.5"
image = { version = "0.25", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
hamming = "0.1"

# Needed by same music
bitflags = "2.6"
lofty = "0.21"

# Needed by broken files
zip = { version = "2.2", features = ["aes-crypto", "bzip2", "deflate", "time"], default-features = false }
audio_checker = "0.1"
pdf = "0.9"

# Needed by audio similarity feature
rusty-chromaprint = "0.2"
symphonia = { version = "0.5", features = ["all"] }

# Hashes for duplicate files
blake3 = "1.5"
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

tempfile = "3.13"

# Video Duplicates
vid_dup_finder_lib = "0.1"
ffmpeg_cmdline_utils = "0.1"

# Saving/Loading Cache
serde = "1.0"
bincode = "1.3"
serde_json = "1.0"

# Language
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = { version = "8.5", features = ["debug-embed"] }
once_cell = "1.20"

# Raw image files
#rawler = "0.6"
#imagepipe = { path = "/home/rafal/test/imagepipe" }
rawloader = "0.37"
imagepipe = "0.5"
libraw-rs = { version = "0.0.4", optional = true }
jxl-oxide = { version = "0.9.0", default-features = false }

# Checking for invalid extensions
mime_guess = "2.0"
infer = "0.16"

# Heif/Heic
libheif-rs = { version = "=0.18.0", optional = true } # Do not upgrade now, since Ubuntu 22.04 not works with newer version
libheif-sys = { version = "=1.14.2", optional = true } # 1.14.3 brake compilation on Ubuntu 22.04, so pin it to this version
anyhow = { version = "1.0.89" }

nom-exif = "2.1.0"

state = "0.6"
trash = "5.1"

os_info = { version = "3", default-features = false }
log = "0.4.22"
handsome_logger = "0.8"
fun_time = { version = "0.3", features = ["log"] }
itertools = "0.13"

# Don't update anymore! This crate has a bug. I've submitted a patch upstream, but the change is breaking. The current code relies on the bug to work correctly!
# Warning by CalunVier 2024.7.15
[target.'cfg(windows)'.dependencies]
file-id = "=0.2.1"

[build-dependencies]
rustc_version = "0.4"

[features]
default = []
heif = ["dep:libheif-rs", "dep:libheif-sys"]
libraw = ["dep:libraw-rs"]
libavif = ["image/avif-native", "image/avif"]
