[package]
name = "czkawka_core"
version = "11.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "Core of Czkawka app"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
humansize = "2.1"
rayon = "1.10"
crossbeam-channel = "0.5"

# For stable iteration over hashmaps.
indexmap = "2.11"

# For saving/loading config files to specific directories
directories-next = "2.0"

# Needed by similar images
image_hasher = { version = "3.0", features = ["fast_resize_unstable"] }
bk-tree = "0.5"
image = { version = "0.25", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp", "rayon"] }
hamming-bitwise-fast = "1.0"

# Needed by same music
bitflags = "2.6"
lofty = "0.23"

# Needed by broken files
zip = { version = "7.0", features = ["aes-crypto", "bzip2", "deflate", "time"], default-features = false }
lopdf = "0.39.0"

# Needed by audio similarity feature
rusty-chromaprint = "0.3"
symphonia = { version = "0.5", features = ["all"] }

# Hashes for duplicate files
blake3 = "1.5"
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

tempfile = "3.13"

# Video Duplicates
vid_dup_finder_lib = "0.4"
filetime = "0.2.26"

# For extracting video properties using ffprobe CLI
# https://github.com/theduke/ffprobe-rs/issues/33
#ffprobe = "0.4.0"

# Saving/Loading Cache
serde = "1.0"
bincode = "<2.0"
serde_json = "1.0"

# Language
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8.5", features = ["debug-embed"] }
once_cell = "1.20"

# Raw image files
rawler = "0.7.0"
libraw-rs = { version = "0.0.4", optional = true }
jxl-oxide = { version = "0.12.0", features = ["image"] }

# Checking for invalid extensions
mime_guess = "2.0"
infer = "0.19"

# Newer version of libheif-rs, which is not compatible with Ubuntu 22.04, and works only o
libheif-rs = { version = "2", optional = true, default-features = false, features = ["v1_17", "image"] }

nom-exif = "2.1.0"

# EXIF data cleaning
little_exif = "0.6.20"

dunce = "1.0.5"

os_info = { version = "3", default-features = false }
log = "0.4.22"
handsome_logger = "0.9"
fun_time = { version = "0.3", features = ["log"] }
itertools = "0.14"
static_assertions = "1.1.0"
file-rotate = "0.8.0"

open = "5.3"

log-panics = { version = "2.1.0", features = ["with-backtrace"] }
deunicode = "1.6.2"
glibc_musl_version = "0.1.0"

rand = "0.10.0"

ashpd = { version = "0.12.1", optional = true }
tokio = { version = "1.49.0", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
trash = "5.1"

[target.'cfg(windows)'.dependencies]
file-id = "0.2.2"

[build-dependencies]
rustc_version = "0.4"
glibc_musl_version = "0.1.0"

[dev-dependencies]
criterion =  { version = "0.8", default-features = false, features = [] }

[[bench]]
name = "hash_calculation_benchmark"
harness = false

[features]
default = []
heif = ["dep:libheif-rs"]
libraw = ["dep:libraw-rs"]
libavif = ["image/avif-native", "image/avif"]
blake_pure = ["blake3/pure"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["ashpd", "tokio"]
[lints]
workspace = true
