[package]
name = "czkawka_gui"
version = "10.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "GTK frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
gdk4 = { version = "0.10", default-features = false, features = ["v4_6"] }
glib = "=0.21"
gtk4 = { version = "0.10", default-features = false, features = ["v4_6"] }

humansize = "2.1"
chrono = "0.4.38"
crossbeam-channel = "0.5"
directories-next = "2.0"
open = "5.3"
image = "0.25"
regex = "1.11"
image_hasher = "3.0"
trash = "5.1"
fs_extra = "1.3"

i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8.5", features = ["debug-embed"] }
once_cell = "1.20"

log = "0.4.22"
fun_time = { version = "0.3", features = ["log"] }
rayon = "1.10"

czkawka_core = { path = "../czkawka_core", version = "10.0.0", features = [] }

resvg = { version = "0.45.1", default-features = false }

[dev-dependencies]
rand = "0.9.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["combaseapi", "objbase", "shobjidl_core", "windef", "winerror", "wtypesbase", "winuser"] }

[features]
default = []
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]

