[package]
name = "czkawka_gui"
version = "11.0.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.94.1"
description = "GTK frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
gdk4 = { version = "0.11.0", default-features = false, features = ["v4_6"] }
glib = "0.22.0"
gtk4 = { version = "0.11.0", default-features = false, features = ["v4_6"] }

humansize = "2.1"
chrono = "0.4.38"
crossbeam-channel = "0.5"
directories-next = "2.0"
open = "5.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
regex = "1.11"
fs_extra = "1.3"

i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8.5", features = ["debug-embed"] }

log = "0.4.22"
fun_time = { version = "0.3", features = ["log"] }
rayon = "1.10"

czkawka_core = { path = "../czkawka_core", version = "11.0.1", features = [] }

resvg = { version = "0.47.0", default-features = false }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
rand = "0.10.0"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["combaseapi", "objbase", "shobjidl_core", "windef", "winerror", "wtypesbase", "winuser"] }

[features]
default = []
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["czkawka_core/xdg_portal_trash"]

[lints]
workspace = true
