[package]
name = "czkawka_gui_orbtk"
version = "1.5.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2018"
description = "Orbtk frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
czkawka_core = { path = "../czkawka_core" }
#orbtk = {git = "https://github.com/redox-os/orbtk", branch="develop"}
orbtk = "=0.3.1-alpha3"