[package]
name = "czkawka_mcp"
version = "11.0.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "MCP (Model Context Protocol) server for Czkawka - exposes file analysis tools to AI agents"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
czkawka_core = { path = "../czkawka_core", version = "11.0.1" }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
crossbeam-channel = "0.5"
log = "0.4"

[features]
default = []
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]

[lints]
workspace = true
