[package]
name = "czkawka_slint"
version = "6.1.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"
rust-version = "1.72.1"
description = "Slint frontend of Czkawka"
license = "GPL-3"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
#slint = "1.2.2"
slint = { git = "https://github.com/slint-ui/slint.git", branch = "olivier/fix-3700"}
rand = "0.8.5"
#czkawka_core = { version = "6.1.0", path = "../czkawka_core" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", branch = "olivier/fix-3700"}