[package]
name = "krokiet"
version = "7.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"
rust-version = "1.74.0"
description = "Slint frontend of Czkawka Core"
license = "GPL-3"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
rand = "0.8"
czkawka_core = { version = "7.0.0", path = "../czkawka_core" }
chrono = "0.4.34"
open = "5.0"
crossbeam-channel = "0.5"
handsome_logger = "0.8"
rfd = { version = "0.13", default-features = false, features = ["xdg-portal", "async-std"] }
home = "0.5"
log = "0.4.20"
serde = "1.0"
serde_json = "1.0"
humansize = "2.1"
image = "0.24"
directories-next = "2.0"
image_hasher = "1.2"
rayon = "1.8"
fs_extra = "1.3" # TODO replace with less buggy library
trash = "3.3"

# Translations
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8"
rust-embed = { version = "8.2", features = ["debug-embed"] }
once_cell = "1.19"

# Try to use only needed features from https://github.com/slint-ui/slint/blob/master/api/rs/slint/Cargo.toml#L23-L31
#slint = { path = "/home/rafal/test/slint/api/rs/slint/", default-features = false, features = ["std",
#slint = { git = "https://github.com/slint-ui/slint.git", default-features = false, features = [
 slint = { version = "1.4", default-features = false, features = [
    "std",
    "backend-winit",
    "compat-1-2"
] }
[build-dependencies]
#slint-build = { path = "/home/rafal/test/slint/api/rs/build/"}
#slint-build = { git = "https://github.com/slint-ui/slint.git" }
 slint-build = "1.4"

[features]
default = ["winit_femtovg", "winit_software"]
skia_opengl = ["slint/renderer-skia-opengl"]
skia_vulkan = ["slint/renderer-skia-vulkan"]
software = ["slint/renderer-software"]
femtovg = ["slint/renderer-femtovg"]
winit_femtovg = ["slint/renderer-winit-femtovg"]
winit_skia_opengl = ["slint/renderer-winit-skia-opengl"]
winit_skia_vulkan = ["slint/renderer-winit-skia-vulkan"]
winit_software = ["slint/renderer-winit-software"]

heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
